--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=HP240G9-HESHAN\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=HP240G9-HESHAN\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "NZWalksAuthConnectionString": "Server=HP240G9-HESHAN\\SQLEXPRESS;Database=NZWalksAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "eyJhbGciOiJIUzI1NiJ9.eyJpZCI6IjEifQ.abc123",
+    "Issuer": "https://localhost:7117;http://localhost:5157",
+    "Audience": "https://localhost:7117;http://localhost:5157"
   }
 }
